Fix header tabs spacing

--- a/src/index.css
+++ b/src/index.css
@@ -4935,13 +4935,17 @@ textarea {
 
 .tabs {
   display: grid;
-  grid-template-columns: repeat(6, minmax(86px, 1fr));
+  grid-template-columns: repeat(5, minmax(86px, 1fr));
   width: 100%;
   flex: none;
   overflow: hidden;
   border: 1px solid #111;
   border-right: 1px solid #111;
   transform: none;
+}
+
+.tabs button:last-child {
+  border-right: 1px solid #111;
 }
 
 .stylist-page {
